# focus-tracker

./: .gitignore  README.md  focus_tracker.py  pyproject.toml
timetracking/: __init__.py  focus_tracker.py
