[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "focus-tracker"
version = "0.1.0"
description = "A command-line tool for tracking focused work time"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "hatchling>=1.27.0",
]

[project.scripts]
focus-tracker = "timetracking.focus_tracker:main"

[tool.hatch.build.targets.wheel]
packages = ["timetracking"]

[tool.hatch.build]
include = ["timetracking/**/*.py"]
